fix RemoteRepository, ViewModelMainActivity, MainActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -199,9 +199,9 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -210,8 +210,8 @@
         <TextView
             android:id="@+id/textViewStart"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
             android:drawableBottom="@drawable/start"
             android:gravity="center"
             android:text="?"
@@ -223,15 +223,15 @@
         <ImageView
             android:id="@+id/imageViewArrows"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
             android:src="@drawable/ic_compare_arrows_black" />
 
         <TextView
             android:id="@+id/textViewFinish"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
             android:drawableBottom="@drawable/finish"
             android:gravity="center"
             android:text="?"
