fix Address class, RemoteRepository, MainActivity and ViewModelMainActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,8 @@
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Enter value"
-                android:inputType="textPersonName"
+                android:inputType="number"
+                android:digits="0123456789."
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
                 android:textSize="16sp" />
@@ -93,7 +94,8 @@
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Enter value"
-                android:inputType="textPersonName"
+                android:inputType="number"
+                android:digits="0123456789."
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
                 android:textColorHighlight="@android:color/transparent"
@@ -122,7 +124,8 @@
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Enter value"
-                android:inputType="textPersonName"
+                android:inputType="number"
+                android:digits="0123456789."
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
                 android:textSize="16sp" />
@@ -149,7 +152,8 @@
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Enter value"
-                android:inputType="textPersonName"
+                android:inputType="number"
+                android:digits="0123456789."
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
                 android:textSize="16sp" />
@@ -199,7 +203,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -248,7 +252,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
