--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,11 @@
         android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/sixteenIntuit"
         android:gravity="center"
         android:text="Calculate distance between two points"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/black"
+        android:textSize="@dimen/eighteenIntuit"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,12 +25,12 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="2dp"
-        app:cardMaxElevation="2dp"
+        android:layout_marginStart="@dimen/twentyFourIntuit"
+        android:layout_marginTop="@dimen/eightIntuit"
+        android:layout_marginEnd="@dimen/twentyFourIntuit"
+        app:cardCornerRadius="@dimen/eightIntuit"
+        app:cardElevation="@dimen/twoIntuit"
+        app:cardMaxElevation="@dimen/twoIntuit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,156 +42,150 @@
             android:layout_height="wrap_content"
             android:background="@drawable/background"
             android:orientation="vertical"
-            android:paddingTop="16dp"
-            android:paddingBottom="20dp">
+            android:paddingTop="@dimen/sixteenIntuit"
+            android:paddingBottom="@dimen/twentyIntuit">
 
             <TextView
                 android:id="@+id/textViewFirstLatitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dp"
+                android:layout_marginLeft="@dimen/thirtyTwoIntuit"
                 android:text="Latitude:"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@android:color/white"
-                android:textSize="16sp" />
+                android:textSize="@dimen/sixteenIntuit" />
 
             <EditText
                 android:id="@+id/editTextFirstLatitude"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="@dimen/thirtyTwoIntuit"
+                android:layout_marginEnd="@dimen/thirtyTwoIntuit"
                 android:background="@drawable/custom_edit_text"
+                android:digits="0123456789."
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Enter value"
                 android:inputType="number"
-                android:digits="0123456789."
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:textSize="16sp" />
+                android:paddingTop="@dimen/eightIntuit"
+                android:paddingBottom="@dimen/eightIntuit"
+                android:textSize="@dimen/sixteenIntuit" />
 
             <TextView
                 android:id="@+id/textViewFirstLongitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="@dimen/thirtyTwoIntuit"
+                android:layout_marginTop="@dimen/fourIntuit"
                 android:text="Longitude:"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/white"
-                android:textSize="16sp" />
+                android:textSize="@dimen/sixteenIntuit" />
 
             <EditText
                 android:id="@+id/editTextFirstLongitude"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="@dimen/thirtyTwoIntuit"
+                android:layout_marginEnd="@dimen/thirtyTwoIntuit"
                 android:background="@drawable/custom_edit_text"
+                android:digits="0123456789."
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Enter value"
                 android:inputType="number"
-                android:digits="0123456789."
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
+                android:paddingTop="@dimen/eightIntuit"
+                android:paddingBottom="@dimen/eightIntuit"
                 android:textColorHighlight="@android:color/transparent"
                 android:textColorLink="#D81B60"
-                android:textSize="16sp" />
+                android:textSize="@dimen/sixteenIntuit" />
 
             <TextView
                 android:id="@+id/textViewSecondLatitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginLeft="@dimen/thirtyTwoIntuit"
+                android:layout_marginTop="@dimen/twentyFourIntuit"
                 android:text="Latitude:"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/white"
-                android:textSize="16sp" />
+                android:textSize="@dimen/sixteenIntuit" />
 
             <EditText
                 android:id="@+id/editTextSecondLatitude"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="@dimen/thirtyTwoIntuit"
+                android:layout_marginEnd="@dimen/thirtyTwoIntuit"
                 android:background="@drawable/custom_edit_text"
+                android:digits="0123456789."
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Enter value"
                 android:inputType="number"
-                android:digits="0123456789."
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:textSize="16sp" />
+                android:paddingTop="@dimen/eightIntuit"
+                android:paddingBottom="@dimen/eightIntuit"
+                android:textSize="@dimen/sixteenIntuit" />
 
             <TextView
                 android:id="@+id/textViewSecondLongitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="@dimen/thirtyTwoIntuit"
+                android:layout_marginTop="@dimen/fourIntuit"
                 android:text="Longitude:"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/white"
-                android:textSize="16sp" />
+                android:textSize="@dimen/sixteenIntuit" />
 
             <EditText
                 android:id="@+id/editTextSecondLongitude"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="@dimen/thirtyTwoIntuit"
+                android:layout_marginEnd="@dimen/thirtyTwoIntuit"
                 android:background="@drawable/custom_edit_text"
+                android:digits="0123456789."
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Enter value"
                 android:inputType="number"
-                android:digits="0123456789."
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:textSize="16sp" />
+                android:paddingTop="@dimen/eightIntuit"
+                android:paddingBottom="@dimen/eightIntuit"
+                android:textSize="@dimen/sixteenIntuit" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="@dimen/thirtyTwoIntuit"
+                android:layout_marginTop="@dimen/thirtyTwoIntuit"
+                android:layout_marginEnd="@dimen/thirtyTwoIntuit"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/buttonCalculate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="@dimen/eightIntuit"
                     android:layout_weight="1"
                     android:background="@drawable/custom_calculate_button"
                     android:text="Calculate"
                     android:textAllCaps="false"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/sixteenIntuit"
                     android:textStyle="bold" />
 
                 <Button
                     android:id="@+id/buttonReset"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="@dimen/eightIntuit"
                     android:layout_weight="1"
                     android:background="@drawable/custom_reset_button"
                     android:text="Reset"
                     android:textAllCaps="false"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/sixteenIntuit"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -203,7 +197,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/twentyFourIntuit"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -213,15 +207,14 @@
             android:id="@+id/textViewStart"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/eightIntuit"
+            android:layout_marginEnd="@dimen/eightIntuit"
             android:layout_weight="0.4"
             android:drawableBottom="@drawable/start"
             android:gravity="center"
             android:text="?"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/sixteenIntuit"
             android:textStyle="bold" />
 
         <ImageView
@@ -235,15 +228,14 @@
             android:id="@+id/textViewFinish"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/eightIntuit"
+            android:layout_marginEnd="@dimen/eightIntuit"
             android:layout_weight="0.4"
             android:drawableBottom="@drawable/finish"
             android:gravity="center"
             android:text="?"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/sixteenIntuit"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -251,12 +243,12 @@
         android:id="@+id/textViewDistance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="@dimen/twentyFourIntuit"
+        android:layout_marginTop="@dimen/sixteenIntuit"
+        android:layout_marginEnd="@dimen/twentyFourIntuit"
         android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/black"
+        android:textSize="@dimen/sixteenIntuit"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
