--- a/app/src/main/res/drawable/custom_edit_text.xml
+++ b/app/src/main/res/drawable/custom_edit_text.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <corners android:radius="10dp"/>
-        <stroke android:color="@color/black" android:width="2dp"/>
+        <corners android:radius="@dimen/tenIntuit"/>
+        <stroke android:color="@color/black" android:width="@dimen/twoIntuit"/>
         <solid android:color="@color/white"/>
     </shape>
 </item>
