change calculate button and reset button

--- a/app/src/main/res/drawable/custom_calculate_button.xml
+++ b/app/src/main/res/drawable/custom_calculate_button.xml
@@ -2,6 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/green"/>
-    <corners android:radius="@dimen/sixteenIntuit"/>
+    <corners android:bottomRightRadius="@dimen/thirtyFiveIntuit"
+        android:bottomLeftRadius="@dimen/thirtyFiveIntuit"
+        android:topRightRadius="@dimen/thirtyFiveIntuit"
+        android:topLeftRadius="@dimen/thirtyFiveIntuit"/>
 
 </shape>
